# learnopengl

./: .clang-format  .gitignore  README.md  meson.build
adv_lighting/: meson.build
adv_opengl/: meson.build
adv_opengl/depth/: draw_function_graph.ipynb  program.cpp  program.h  what_he_said.md
adv_opengl/depth/.ipynb_checkpoints/: draw_function_graph-checkpoint.ipynb  what_he_said-checkpoint.md
adv_opengl/stencil/: what_he_said.tex
assets/: download.sh
assets/glsl/: fragment.glsl  fragment_caster.glsl  fragment_color.glsl  fragment_map.glsl  fragment_transformation.glsl  vertex.glsl  vertex_coordinate.glsl  vertex_transformation.glsl
assets/glsl/basic/: fragment_basic.glsl  vertex_basic.glsl
assets/glsl/caster/: fragment_caster.glsl  vertex_caster.glsl
assets/glsl/color/: fragment_color.glsl  fragment_color_light.glsl  vertex_color.glsl
assets/glsl/coordinate/: fragment_coordinate.glsl  vertex_coordinate.glsl
assets/glsl/map/: fragment_map.glsl  vertex_map.glsl
assets/glsl/material/: fragment_material.glsl
assets/glsl/mesh/: fragment_multi.glsl
assets/glsl/model/: fragment.glsl  vertex.glsl
assets/glsl/multi_light/: fragment_multi.glsl  vertex_multi.glsl
assets/glsl/texture/: fragment_texture.glsl  vertex_texture.glsl
assets/glsl/transformation/: vertex_transformation.glsl
get_started/: camera.cpp  camera.h  coordinate_3d_multi_boxes.cpp  coordinate_3d_one_box.cpp  meson.build  shader.cpp  texture.cpp  transformation.cpp  triangle.cpp  window.cpp
get_started/camera/: camera.cpp  camera.h
get_started/coordinate/: coordinate.cpp  coordinate_3d_multi_boxes.cpp  coordinate_3d_one_box.cpp
include/glad/: gl.h
lighting/: basic.cpp  basic.h  caster.cpp  caster.h  color.cpp  color.h  map_effect.cpp  map_effect.h  material.cpp  material.h  meson.build  multi_light.cpp  multi_light.h
lighting/basic/: basic.cpp  basic.h
lighting/caster/: caster.cpp  caster.h
lighting/color/: color.cpp  color.h
lighting/map/: map_effect.cpp  map_effect.h
lighting/material/: material.cpp  material.h
lighting/multi/: multi_light.cpp  multi_light.h
model_loading/: meson.build
model_loading/mesh/: mesh.cpp  mesh.h
model_loading/model/: model.cpp  model.h
pbr/: meson.build
