deps = [
  dependency('glfw3'),
]
executable('window', 'window.cpp', dependencies: deps)
executable('triangle', 'triangle.cpp', dependencies: deps)
executable('shader', 'shader.cpp', dependencies: deps)
# TODO 23号完成下面四个
executable('texture', 'texture.cpp', dependencies: deps)
# executable('transformation', 'transformation.cpp', dependencies: deps)
# executable('coordinate', 'coordinate.cpp', dependencies: deps)
# executable('camera', 'camera.cpp', dependencies: deps)