deps = [
  dependency('glfw3'),
]
executable('window', 'window.cpp', dependencies: deps)
executable('triangle', 'triangle.cpp', dependencies: deps)
executable('shader', 'shader.cpp', dependencies: deps)
executable('texture', 'texture.cpp', dependencies: deps)
executable('transformation', 'transformation.cpp', dependencies: deps)
executable('coordinate', 'coordinate.cpp', dependencies: deps)
executable('coordinate_one_box', 'coordinate_3d_one_box.cpp', dependencies: deps)
executable('coordinate_multi_box', 'coordinate_3d_multi_boxes.cpp', dependencies: deps)
executable('camera', 'camera.cpp', dependencies: deps)