deps = [
  dependency('glfw3'),
]
inc = [
  '-I../include',
]
executable('color', 'color.cpp', dependencies: deps, cpp_args: inc)
executable('basic', 'basic.cpp', dependencies: deps, cpp_args: inc)
executable('material', 'material.cpp', dependencies: deps, cpp_args: inc)
executable('map_effect', 'map_effect.cpp', dependencies: deps, cpp_args: inc)
# TODO 明天的剩余部分
# executable('caster', 'caster.cpp', dependencies: deps, cpp_args: inc)
# executable('multi_light', 'multi_light.cpp', dependencies: deps, cpp_args: inc)
