deps = [
  dependency('glfw3'),
]
inc = [
  '-I../include',
]
executable('color', 'color.cpp', dependencies: deps, cpp_args: inc)
executable('basic', 'basic.cpp', dependencies: deps, cpp_args: inc)
executable('material', 'material.cpp', dependencies: deps, cpp_args: inc)
executable('map_effect', 'map_effect.cpp', dependencies: deps, cpp_args: inc)
executable('caster', 'caster.cpp', dependencies: deps, cpp_args: inc)
# executable('multi_light', 'multi_light.cpp', dependencies: deps, cpp_args: inc)
# TODO 完成这一章之后对glsl进行整理，创建子目录，对各个章节进行细分小节