deps = [
  dependency('glfw3'),
]
inc = [
  '-I../include',
]
executable('color', 'color/color.cpp', dependencies: deps, cpp_args: inc)
executable('basic', 'basic/basic.cpp', dependencies: deps, cpp_args: inc)
executable('material', 'material/material.cpp', dependencies: deps, cpp_args: inc)
executable('map_effect', 'map/map_effect.cpp', dependencies: deps, cpp_args: inc)
executable('caster', 'caster/caster.cpp', dependencies: deps, cpp_args: inc)
executable('multi_light', 'multi/multi_light.cpp', dependencies: deps, cpp_args: inc)